fixing white space on mobile

--- a/src/styles/overviewContainer.scss
+++ b/src/styles/overviewContainer.scss
@@ -1,6 +1,6 @@
 .main {
   width: 80vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: $blue;
   position: absolute;
   right: 0;
